# cheesecrab

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.go  cheese  cheese_client.py  convert_cheese_ggml_to_gguf.py  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_lora_to_gguf.py  docker-compose.yml  flake.nix  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  run.sh
.cache/: e2e-report.json  (+9 more)
examples/cheese.android/lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
examples/eval-callback/: CMakeLists.txt  README.md  eval-callback.cpp
examples/lookup/: CMakeLists.txt  README.md  lookup-create.cpp  lookup-merge.cpp  lookup-stats.cpp  lookup.cpp
examples/simple-cmake-pkg/: CMakeLists.txt  README.md
pocs/vdot/: CMakeLists.txt
src/: CMakeLists.txt  cheese-adapter.cpp  cheese.cpp  prompt_builder.cpp  unicode.cpp
src/models/: afmoe.cpp  apertus.cpp  arcee.cpp  arctic.cpp  arwkv7.cpp  baichuan.cpp  bailingmoe.cpp  bailingmoe2.cpp  bert.cpp  bitnet.cpp  bloom.cpp  chameleon.cpp  chatglm.cpp  cheese-iswa.cpp  cheese.cpp  codeshell.cpp  cogvlm.cpp  cohere2-iswa.cpp  command-r.cpp  dbrx.cpp  deci.cpp  deepseek.cpp  deepseek2.cpp  dots1.cpp  dream.cpp  ernie4-5-moe.cpp  ernie4-5.cpp  eurobert.cpp  exaone-moe.cpp  exaone.cpp  exaone4.cpp  falcon-h1.cpp  falcon.cpp  gemma-embedding.cpp  gemma.cpp  gemma2-iswa.cpp  gemma3.cpp  gemma3n-iswa.cpp  glm4-moe.cpp  glm4.cpp  (+72 more)
tests/: CMakeLists.txt  get-model.cpp  test-arg-parser.cpp  test-autorelease.cpp  test-backend-ops.cpp  test-backend-sampler.cpp  test-c.c  test-chat-parser.cpp  test-chat-peg-parser.cpp  test-chat-template.cpp  test-chat.cpp  test-cheese-grammar.cpp  test-contextsqueezer-vision.cpp  test-contextsqueezer.cpp  test-gbnf-validator.cpp  test-grammar-integration.cpp  test-grammar-llguidance.cpp  test-grammar-parser.cpp  test-json-partial.cpp  test-json-schema-to-grammar.cpp  test-lora-conversion-inference.sh  test-model-load-cancel.cpp  test-mtmd-c-api.c  test-peg-parser.cpp  test-pomaicache.cpp  test-pomaidb-rag.cpp  test-prompt-builder.cpp  test-quantize-stats.cpp  test-sampling.cpp  test-state-restore-fragmented.cpp  test-thread-safety.cpp  test-tokenizer-0.cpp  test-tokenizer-0.py  test-tokenizer-0.sh  test-tokenizer-1-bpe.cpp  test-tokenizer-1-spm.cpp  test-tokenizer-random.py  test_api.py
tools/: CMakeLists.txt
tools/batched-bench/: CMakeLists.txt  README.md  batched-bench.cpp
tools/cheese-bench/: CMakeLists.txt  README.md  cheese-bench.cpp
tools/cli/: CMakeLists.txt  README.md  cli.cpp
tools/completion/: CMakeLists.txt  README.md  completion.cpp
tools/cvector-generator/: CMakeLists.txt  README.md  cvector-generator.cpp  mean.hpp  pca.hpp
tools/export-lora/: CMakeLists.txt  README.md  export-lora.cpp
tools/fit-params/: CMakeLists.txt  README.md  fit-params.cpp
tools/gguf-split/: CMakeLists.txt  gguf-split.cpp  tests.sh
tools/imatrix/: CMakeLists.txt  README.md  imatrix.cpp
tools/mtmd/: CMakeLists.txt  README.md  clip-graph.h  clip-impl.h  clip.cpp  deprecation-warning.cpp  mtmd-cli.cpp  mtmd-helper.cpp  mtmd-helper.h  mtmd.cpp  mtmd.h  requirements.txt  tests.sh
tools/mtmd/legacy-models/: glmedge-surgery.py  llava_surgery.py  llava_surgery_v2.py  minicpmv-convert-image-encoder-to-gguf.py  minicpmv-surgery.py
tools/mtmd/models/: cheese4.cpp  cogvlm.cpp  internvl.cpp  models.h  whisper-enc.cpp
tools/perplexity/: CMakeLists.txt  README.md  perplexity.cpp
tools/quantize/: CMakeLists.txt  README.md  quantize.cpp  tests.sh
tools/rpc/: CMakeLists.txt  README.md  rpc-server.cpp
tools/server/: CMakeLists.txt  README-dev.md  README.md  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-http.cpp  server-models.cpp  server-models.h  server-task.cpp  server-task.h  server.cpp
tools/server/bench/: README.md  bench.py  prometheus.yml  script.js
tools/server/public/: crab-ui.html
tools/server/public_legacy/: completion.js  index-new.html  index.html  prompt-formats.js  style.css  theme-mangotango.css
tools/server/public_simplechat/: index.html  readme.md
tools/server/tests/: README.md  utils.py
tools/server/tests/unit/: test_basic.py  test_chat_completion.py  test_compat_anthropic.py  test_compat_oai_responses.py  test_completion.py  test_ctx_shift.py  test_infill.py  test_lora.py  test_security.py  test_sleep.py  test_slot_save.py  test_speculative.py  test_template.py  test_tokenize.py  test_tool_call.py
tools/server/themes/: README.md
tools/server/themes/buttons-top/: README.md  index.html
tools/server/themes/wild/: README.md  index.html
tools/server/webui/: README.md  vite.config.ts
tools/server/webui/docs/architecture/: high-level-architecture-simplified.md  high-level-architecture.md
tools/server/webui/docs/flows/: data-flow-simplified-model-mode.md  data-flow-simplified-router-mode.md  database-flow.md  models-flow.md  server-flow.md  settings-flow.md
tools/server/webui/scripts/: dev.sh
tools/server/webui/src/: app.d.ts
tools/server/webui/src/lib/components/app/server/: ServerErrorSplash.svelte  ServerLoadingSplash.svelte
tools/server/webui/src/lib/constants/: localstorage-keys.ts
tools/server/webui/src/lib/services/: chat.service.ts  database.service.ts  index.ts  parameter-sync.service.spec.ts  parameter-sync.service.ts  props.service.ts
tools/server/webui/src/lib/stores/: models.svelte.ts  server.svelte.ts
tools/server/webui/src/lib/types/: api.d.ts  index.ts
tools/server/webui/src/lib/utils/: model-names.ts
tools/server/webui/src/routes/: +page.svelte
tools/server/webui/src/routes/chat/[id]/: +page.svelte
tools/server/webui/tests/stories/: Introduction.mdx  MarkdownContent.stories.svelte
tools/server/webui/tests/stories/fixtures/: storybook-mocks.ts
tools/server/webui/tests/unit/: model-names.test.ts
tools/tokenize/: CMakeLists.txt  tokenize.cpp
tools/tts/: CMakeLists.txt  README.md  tts.cpp
tools/vendor-bench/: CMakeLists.txt  bench-contextsqueezer-vision.cpp  bench-contextsqueezer.cpp  bench-pomaicache.cpp  bench-pomaidb-rag.cpp
(+449 files in other folders)
