# Benchmarks for vendor libs (contextsqueezer, pomaicache, pomaidb). Verify core APIs and report timing.

if (TARGET contextsqueeze)
    add_executable(bench-contextsqueezer bench-contextsqueezer.cpp)
    target_include_directories(bench-contextsqueezer PRIVATE ${CMAKE_SOURCE_DIR}/vendor/contextsqueezer/include)
    target_link_libraries(bench-contextsqueezer PRIVATE contextsqueeze)
    if (CHEESE_TOOLS_INSTALL)
        install(TARGETS bench-contextsqueezer RUNTIME)
    endif()

    add_executable(bench-contextsqueezer-vision bench-contextsqueezer-vision.cpp)
    target_include_directories(bench-contextsqueezer-vision PRIVATE ${CMAKE_SOURCE_DIR}/vendor/contextsqueezer/include)
    target_link_libraries(bench-contextsqueezer-vision PRIVATE contextsqueeze)
    if (CHEESE_TOOLS_INSTALL)
        install(TARGETS bench-contextsqueezer-vision RUNTIME)
    endif()
endif()

if (TARGET pomaicache)
    add_executable(bench-pomaicache bench-pomaicache.cpp)
    set_target_properties(bench-pomaicache PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
    target_include_directories(bench-pomaicache PRIVATE ${CMAKE_SOURCE_DIR}/vendor/pomaicache/include)
    target_link_libraries(bench-pomaicache PRIVATE pomaicache)
    if (CHEESE_TOOLS_INSTALL)
        install(TARGETS bench-pomaicache RUNTIME)
    endif()
endif()

if (TARGET pomai_c_static)
    add_executable(bench-pomaidb-rag bench-pomaidb-rag.cpp)
    target_include_directories(bench-pomaidb-rag PRIVATE ${CMAKE_SOURCE_DIR}/vendor/pomaidb/include)
    target_link_libraries(bench-pomaidb-rag PRIVATE pomai_c_static)
    if (CHEESE_TOOLS_INSTALL)
        install(TARGETS bench-pomaidb-rag RUNTIME)
    endif()
endif()
